<?xml version="1.0"?>
<package format="2">
  <name>sawyer_robot_code</name>
  <version>2.0.0</version>
  <description>NTU Sawyer robot stack</description>
  <maintainer email="pedro.baptistamachado@ntu.ac.uk">quentin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>intera_interface</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_export_depend>intera_core_msgs</build_export_depend>
</package>
