<?xml version="1.0"?>
<package format="2">
  <name>sawyer_robot_simulation</name>
  <version>2.0.0</version>
  <description>Package used to work with the Sawyer robot simulation</description>
  <maintainer email="quentin.olivier1996@gmail.com">quentin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>intera_interface</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_export_depend>intera_core_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>intera_interface</build_export_depend>
  <exec_depend>intera_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>intera_core_msgs</exec_depend>

</package>
